--- a/backend/preguntados-de-cero/build.gradle
+++ b/backend/preguntados-de-cero/build.gradle
@@ -4,9 +4,9 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com'
+group = 'com.guitarradecero'
 version = '0.0.1-SNAPSHOT'
-description = 'Backend para aplicación de juegos de trivia.'
+description = 'Backend para aplicación de preguntas y respuestas.'
 
 java {
 	toolchain {
