--- a/backend/preguntados-de-cero/src/main/resources/application.properties
+++ b/backend/preguntados-de-cero/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=PreguntadosDeCero
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/guitarradecero
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# DDL generation
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
